# E-Nose

./: .gitignore  .justfile  Model_test.py  Projekt.md  README.md  flake.nix  hardwaretest.py  plot_results.py  pyproject.toml  requirements.txt  run_inference.py  scantest.py  setup_pi.sh  setup_pi.yml  testsimu.py
Data/: data_Mandarine_20251229_131744.csv  data_Mandarine_20251229_200047.csv
DataAcquisition/: __init__.py  config.py  door_detecor.py  door_detector.py  main_logger.py  pyproject.toml  sensors.py
DataAcquisition/src/DataAcquisition/: __init__.py  config.py  door_detector.py  main_logger.py  sensors.py  test_hardware.py  test_simulation.py
LabeledData/Normal/: data_Raum_20251229_031040.csv  data_leererMandarinenraum.csv
LabeledData/Schimmel/: data_OrangeSchimmel_20260110_203920.csv
ModelTraining/: __init__.py  dataset.py  losses.py  model.py  model_advanced.py  pyproject.toml  train.py  train_advanced.py
ModelTraining/src/ModelTraining/: __init__.py  dataset.py  losses.py  model.py  model_advanced.py  train.py  train_advanced.py  trainclassifier.py
checkpoints/: mold_classifier_head.pth  scaler.pkl
checkpoints_old/idkcheck/: mold_classifier_head.pth
docs/: literatur.bib  main.tex
docs/assets/: FridgeMoCA.md  arch.md  dataProcessing.md
docs/figures/: architecture.tex  gas_resistance.tex  sensor_comparison.tex
docs/tables/: architecture.tex  hyperparameters.tex  measurements.tex
setup/: setup_pi.sh  setup_pi.yml
tools/: __init__.py  hardwaretest.py  pyproject.toml  testsimu.py
tools/src/tools/: plot_data.py
