[project]
name = "e-nose"
version = "0.1.0"
description = "E-Nose: Electronic nose for food spoilage detection using CO2 and VOC sensors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "data-acquisition",
    "model-training",
    "tools",
]

[project.optional-dependencies]
# Re-export GPIO extras from DataAcquisition for workspace-level install
pi4 = ["data-acquisition[pi4]"]
pi5 = ["data-acquisition[pi5]"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# E/F = Standard Linting
# I   = Sort Imports
# UP  = Modernize (Python 3.11+)
# B   = Find Bugs
# SIM = Simplify Code
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.uv]
package = false

[tool.uv.sources]
tools = { workspace = true }
data-acquisition = { workspace = true }
model-training = { workspace = true }

[tool.uv.workspace]
members = ["DataAcquisition", "ModelTraining", "tools"]