[project]
name = "data-acquisition"
version = "0.1.0"
description = "E-Nose data acquisition module for Raspberry Pi sensor logging"
requires-python = ">=3.11"
dependencies = [
    # Adafruit sensor libraries (Raspberry Pi only)
    "adafruit-blinka>=8.0.0 ; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "adafruit-circuitpython-extended-bus ; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "adafruit-circuitpython-scd30>=2.2.0 ; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "adafruit-circuitpython-bme680>=3.7.0 ; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    # Serial communication
    "pyserial>=3.5",
    # Database
    "influxdb-client>=1.40.0",
    # Data processing & visualization
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
]

[project.optional-dependencies]
# Pi4 and older: use traditional RPi.GPIO
pi4 = [
    "RPi.GPIO>=0.7.0",
    "rpi-ws281x>=5.0.0",
]
# Pi5: uses RP1 chip, needs lgpio-based libraries
pi5 = [
    "rpi-lgpio>=0.6",
]

[project.scripts]
enose-logger = "DataAcquisition.main_logger:main"
enose-simulate = "DataAcquisition.test_simulation:run_test"
enose-hwtest = "DataAcquisition.test_hardware:run_hardware_test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/DataAcquisition"]
