[project]
name = "model-training"
version = "0.1.0"
description = "E-Nose model training module with MAE and DINOv2 architectures"
requires-python = ">=3.11"
dependencies = [
    # Deep Learning
    "torch>=2.0.0",
    # Data processing
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
]

[project.scripts]
enose-train = "ModelTraining.train:main"
enose-train-advanced = "ModelTraining.train_advanced:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ModelTraining"]
