[project]
name = "tools"
version = "0.1.0"
description = "E-Nose utility tools for hardware testing and simulation"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
]

[project.scripts]
enose-plot = "tools.plot_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tools"]